[build-system]
requires = ["setuptools >= 75.1"]
build-backend = "setuptools.build_meta"

[project]
name = "py_database"
description = "Python files used as databases."
version = "1.0a1"
requires-python = ">= 3.12"
authors = [
    {name = "Tathya Garg", email = "coding.tathya@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12"
]